--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "mysql2": "^3.6.0",
     "sequelize": "^6.32.1",
     "tedious": "^16.4.0"
   },
